--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,21 @@
-== README
+# FitLog
+FitLog is a web app designed to allow users to keep track of their workout online.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+![](app/assets/images/front.png)
 
-Things you may want to cover:
+### _How to Use_
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Create an account and start logging your workouts!
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+### _Technologies Used_
+
+* Ruby on Rails
+* PostgreSQL
+* jQuery
+* Bootstrap
+* HTML/CSS
+
+![](app/assets/images/tables.png)
+
+
